--- a/BizwebTutorial/Areas/Admin/Views/Category/Edit.cshtml
+++ b/BizwebTutorial/Areas/Admin/Views/Category/Edit.cshtml
@@ -254,7 +254,9 @@
         for (var i = 0; i < proselect.length; i++) {
             for (var j = 0; j < productidview.length; j++) {
                 if (productidview[j] == proselect[i]) {
-                    $('.itemproduct[product-id="' + productidview[j] + '"]').addClass('selected');
+                    var LiitemPro = $('.itemproduct[product-id="' + productidview[j] + '"]');
+                    LiitemPro.addClass('selected');
+                    LiitemPro.children('i').addClass('fa-check');
                 }
             }
         }
@@ -262,6 +264,7 @@
     function selectProduct() {
         $('#dropdown_menu_result_2  .itemproduct').click(function () {
             var _itemliclass = $(this);
+            var ItemILi = _itemliclass.children('i');
             var id = _itemliclass.attr('data-productId');
             var name = _itemliclass.attr('data-productName');
             var image = _itemliclass.attr('data-productImage');
@@ -284,6 +287,7 @@
                     contentType: 'application/json; charset=utf-8',
                     success: function (data) {
                         _itemliclass.addClass('selected');
+                        ItemILi.addClass('fa-check');
                         $('.list-product').append(htmlhasimage);
                         $('#dropdown_search_input_2').val("");
                     }
@@ -295,6 +299,7 @@
                     contentType: 'application/json; charset=utf-8',
                     success: function (data) {
                         _itemliclass.removeClass('selected');
+                        ItemILi.removeClass('fa-check');
                         $('.list-product li[data-product-id="' + id + '"]').remove();
                         $('#dropdown_search_input_2').val("");
                     }
@@ -311,7 +316,9 @@
             type: 'GET',
             contentType: 'application/json; charset=utf-8',
             success: function (data) {
-                $('#dropdown_menu_result_2  li.itemproduct[product-id="' + Idproduct + '"]').removeClass('selected');
+                var itemlias = $('#dropdown_menu_result_2  li.itemproduct[product-id="' + Idproduct + '"]');
+                itemlias.removeClass('selected');
+                itemlias.children('i').removeClass('fa-check');
                 $('.list-product li[data-product-id="' + Idproduct + '"]').remove();
             }
         });
@@ -338,13 +345,11 @@
     ul#dropdown_menu_inner_2 {
         padding-left: 0px;
     }
-
-    li.itemproduct.selected .Liselectedcontent:before {
-        content: "O";
-    }
-
     li.itemproduct {
         padding-left: 10px;
+    }
+    i.CheckProduct{
+        width:10%;
     }
 </style>
 <script>
