--- a/BizwebTutorial/Areas/Admin/Views/Category/ProductShow.cshtml
+++ b/BizwebTutorial/Areas/Admin/Views/Category/ProductShow.cshtml
@@ -12,19 +12,9 @@ else
         {
             var product = Model[i];
             <li class="itemproduct" product-id="@Model[i].Id" data-productId="@product.Id" data-productName="@product.Name" data-productImage="@Url.Content(product.Image)">
-                <table style="width:100%;">
-                    <tbody>
-                        <tr>
-                            <td class="Liselectedcontent" style="width:20%;"></td>
-                            <td style="width:80%;">
-                                <span>@Model[i].Name</span>
-                            </td>
-                        </tr>
-                    </tbody>
-                </table>
+                <i class="CheckProduct fa "></i><span>@Model[i].Name</span>
             </li>
         }
-     
     </ul>
 }
 
