--- a/BizwebTutorial/Areas/Admin/Views/Product/MinicategoryIndex.cshtml
+++ b/BizwebTutorial/Areas/Admin/Views/Product/MinicategoryIndex.cshtml
@@ -1,5 +1,6 @@
 ﻿@model PagedList.IPagedList<Models.EF.Category>
 @using PagedList.Mvc;
+<link href="~/Assets/dist/assets/font-awesome/css/font-awesome.css" rel="stylesheet" />
 @if (Model == null)
 {
     <h2>không có sản phẩm nào</h2>
@@ -10,17 +11,8 @@ else
         @for (var i = 0; i < Model.Count; i++)
         {
             var category = Model[i];
-            <li class="itemCategory" data-categoryId="@category.Id" data-categoryName="@category.Name" data-categoryImage="@category.Image">
-                <table style="width:100%;">
-                    <tbody>
-                        <tr>
-                            <td class="Liselectedcontent" style="width:20%;"></td>
-                            <td style="width:80%;">
-                                <span>@Model[i].Name</span>
-                            </td>
-                        </tr>
-                    </tbody>    
-                </table>
+            <li class="itemCategory " data-categoryId="@category.Id" data-categoryName="@category.Name" data-categoryImage="@category.Image">
+                <i class="CheckCat fa "></i><span>@Model[i].Name</span>
             </li>
         }
     </ul>
