--- a/BizwebTutorial/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/BizwebTutorial/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -55,7 +55,7 @@
 
             <nav>
                 <ul class="nav nav-pills nav-stacked">
-                    <li class="nav-dropdown active open">
+                    <li class="nav-dropdown ">
                         <a href="/Admin/Dashboard" title="Trang chủ">
                             <i class="fa fa-lg fa-fw fa-home"></i> Trang chủ
                         </a>
@@ -76,8 +76,18 @@
                         </a>
                     </li>
                     <li class="nav-dropdown">
-                        <a href="/Admin/Customer" title="Forms">
+                        <a href="/Admin/Customer" title="Khách Hàng">
                             <i class="fa fa-lg fa-fw fa-users"></i> Khách hàng
+                        </a>
+                    </li>
+                    <li class="nav-dropdown">
+                        <a href="/Admin/Slide" title="Slide Ảnh">
+                            <i class="fa fa-lg fa-fw fa-image"></i> Slide
+                        </a>
+                    </li>
+                    <li class="nav-dropdown">
+                        <a href="/Admin/Comment" title="Đơn hàng">
+                            <i class="fa fa-lg fa-fw fa-cloud"></i> Nhận xét khách hàng
                         </a>
                     </li>
                 </ul>
