--- a/BizwebTutorial/Views/Home/About.cshtml
+++ b/BizwebTutorial/Views/Home/About.cshtml
@@ -1,14 +1,20 @@
 ﻿@{
     ViewBag.Title = "Giới Thiệu";
 }
-<h2>@ViewBag.Title</h2>
-
 <link href="~/Assets/FrontEndCss/HoverCat.css" rel="stylesheet" />
-<p>BizMark được khởi nguồn vào đầu năm 2012 cùng với sự phát triển của thị trường Thương mại Điện tử tại Việt Nam. Tầm nhìn của chúng tôi là xây dựng Sàn giao dịch hàng tiêu dùng nhanh trực tuyến lớn nhất Việt Nam - địa chỉ tin cậy của các gia đình Việt Nam. Đây sẽ là dự án tiêu biểu mang lại lợi ích lớn cho gia đình, xã hội và đất nước: giúp tiết kiệm chi phí, thời gian, bảo đảm an toàn thực phẩm trong việc mua sắm tiêu dùng hàng ngày của cư dân thành phố, nâng cao chất lượng cuộc sống, góp phần vào công cuộc hiện đại hóa đất nước.
+<div class="bouts">
+    <h2>Giới Thiệu</h2>
+<p> <strong>BizMark</strong> được khởi nguồn vào đầu năm 2012 cùng với sự phát triển của thị trường Thương mại Điện tử tại Việt Nam. Tầm nhìn của chúng tôi là xây dựng Sàn giao dịch hàng tiêu dùng nhanh trực tuyến lớn nhất Việt Nam - địa chỉ tin cậy của các gia đình Việt Nam. Đây sẽ là dự án tiêu biểu mang lại lợi ích lớn cho gia đình, xã hội và đất nước: giúp tiết kiệm chi phí, thời gian, bảo đảm an toàn thực phẩm trong việc mua sắm tiêu dùng hàng ngày của cư dân thành phố, nâng cao chất lượng cuộc sống, góp phần vào công cuộc hiện đại hóa đất nước.</p>
 
-Đối với hệ thống các Nhà cung cấp, BizMark sẽ là công cụ tạo thêm các tiện ích, dịch vụ hỗ trợ khách hàng, thúc đẩy doanh số bán hàng, cắt giảm chi phí tối đa nâng cao lợi nhuận doanh nghiệp cho các nhà bán lẻ hàng tiêu dùng nhanh. BizMark giúp phá bỏ mọi rào cản cũng như giới hạn về thời gian và địa lý giữa khách hàng và các Nhà Cung Cấp.
-Chiến lược phát triển: BizMark hướng tới đối tượng khách hàng chủ yếu là cư dân thành phố. Với sự khảo sát và nghiên cứu kỹ lưỡng nhu cầu cũng mối quan tâm của khách hàng, BizMark sẽ tập trung vào chất lượng sản phẩm và dịch vụ, mang đến cho người tiêu dùng những sản phẩm đảm bảo chất lượng, có thương hiệu lớn, những dịch vụ tốt nhất, tiện lợi nhất.
+<p>Đối với hệ thống các Nhà cung cấp, <strong>BizMark</strong> sẽ là công cụ tạo thêm các tiện ích, dịch vụ hỗ trợ khách hàng, thúc đẩy doanh số bán hàng, cắt giảm chi phí tối đa nâng cao lợi nhuận doanh nghiệp cho các nhà bán lẻ hàng tiêu dùng nhanh. BizMark giúp phá bỏ mọi rào cản cũng như giới hạn về thời gian và địa lý giữa khách hàng và các Nhà Cung Cấp.
+Chiến lược phát triển: BizMark hướng tới đối tượng khách hàng chủ yếu là cư dân thành phố. Với sự khảo sát và nghiên cứu kỹ lưỡng nhu cầu cũng mối quan tâm của khách hàng, BizMark sẽ tập trung vào chất lượng sản phẩm và dịch vụ, mang đến cho người tiêu dùng những sản phẩm đảm bảo chất lượng, có thương hiệu lớn, những dịch vụ tốt nhất, tiện lợi nhất.</p>
 
-Mục tiêu: Trong giai đoạn 2015-2018 BizMark sẽ triển khai thành công mô hình Sàn giao dịch hàng tiêu dùng nhanh trực tuyến tại 3 thành phố lớn trong cả nước là Hà Nội, TP HCM và Đà Nẵng. Giai đoạn tiếp theo BizMark sẽ mở rộng phạm vi cung cấp trên khắp các tỉnh thành trên cả nước và hướng tới đưa mô hình này nhân bản sang các nước trong khu vực.
+<p><strong>Mục Tiêu</strong>: Trong giai đoạn 2015-2018 BizMark sẽ triển khai thành công mô hình Sàn giao dịch hàng tiêu dùng nhanh trực tuyến tại 3 thành phố lớn trong cả nước là Hà Nội, TP HCM và Đà Nẵng. Giai đoạn tiếp theo BizMark sẽ mở rộng phạm vi cung cấp trên khắp các tỉnh thành trên cả nước và hướng tới đưa mô hình này nhân bản sang các nước trong khu vực.</p>
 
-Đối tác: là các doanh nghiệp bán lẻ có thương hiệu, uy tín hoạt động trong lĩnh vực siêu thị và cung ứng các sản phẩm tiêu dùng nhanh .</p>
+<p><strong>Đối Tác</strong>: là các doanh nghiệp bán lẻ có thương hiệu, uy tín hoạt động trong lĩnh vực siêu thị và cung ứng các sản phẩm tiêu dùng nhanh .</p>
+</div>
+<style>
+    .bouts{
+        padding-top:100px;
+    }
+</style>
