--- a/BizwebTutorial/Assets/FrontEndCss/CategoryStyle.css
+++ b/BizwebTutorial/Assets/FrontEndCss/CategoryStyle.css
@@ -1,7 +1,9 @@
-﻿.col-md-9.col-sm-12.col-xs-12 {
+﻿
+
+.col-md-9.col-sm-12.col-xs-12 {
     margin-top: 30px;
 }
-.col-md-4.col-sm-4.col-xs-12.col-lg-4.item_mar {
+.item_mar {
     text-align: center;
     margin-top:20px;
 }
@@ -14,10 +16,10 @@
     border: 1px solid #e8e8e8;
     height: auto;
 }
-.product_title h3 a {
+.product_title h3 a{
     word-break: break-word;
     font-size: 16px;
-    color: #000;
+    color: #e24d85;
     font-family: 'Roboto', sans-serif;
     line-height: 18px;
     font-weight: bolder;
@@ -25,9 +27,9 @@
 .box_product_index h2 span{
     border-bottom: 3px solid #e24d85;
     padding-bottom: 14px;
-    font-size: 22px;
     font-family: 'Roboto', sans-serif;
     text-transform: uppercase;
+    font-size:19px;
 }
 .button.btn-cart.add_to_cart{
     background:#e24d85;
@@ -107,7 +109,10 @@
 display:block;
 }
 .product_img img{
-    width:240px;
-    height:240px;
     max-width:100%;
+}
+@media all and (max-width: 800px) {
+    .product_title h3 a{
+        font-size:12px;
+    }
 }
