--- a/BizwebTutorial/Assets/FrontEndCss/HomeStyle.css
+++ b/BizwebTutorial/Assets/FrontEndCss/HomeStyle.css
@@ -126,7 +126,7 @@
 .product_title h3 a {
     word-break: break-word;
     font-size: 16px;
-    color: #000;
+    color: #e24d85;
     font-family: 'Roboto', sans-serif;
     line-height: 18px;
     font-weight: bolder;
@@ -149,6 +149,10 @@
         font-size: 22px;
         font-family: 'Roboto', sans-serif;
         text-transform: uppercase;
+        color: #000;
+    }
+    .box_product_index a{
+        text-decoration:none;
     }
 .button.btn-cart.add_to_cart{
     background:#e24d85;
@@ -163,7 +167,7 @@
 }
 @media all and (max-width: 800px) {
     .box_product_index h2 span{
-       font-size:20px;
+       font-size:19px;
    }
     .product_title h3 a{
         font-size:12px;
