--- a/BizwebTutorial/Assets/FrontEndCss/Responsive.css
+++ b/BizwebTutorial/Assets/FrontEndCss/Responsive.css
@@ -1,46 +1,52 @@
 ﻿
-.main_menu ul li{
-    float:left;
-    margin-top:15px;
+.main_menu ul li {
+    float: left;
+    margin-top: 15px;
 }
+
 @media all and (max-width: 800px) {
+    div.Contentpage{
+        padding-top:70px;
+    }
     div.row {
         margin-left: 0px;
         margin-right: 0px;
     }
-    .menushow{
-        display:block;
+
+    .menushow {
+        display: block;
     }
-  button.btn.btn-default.dropdown-toggle{
-      float:left;
-  }
+
+    button.btn.btn-default.dropdown-toggle {
+        float: left;
+    }
+
     .btnsort ul.dropdown-menu {
-  
-    margin-left: 0px;
-}
+        margin-left: 0px;
+    }
+
     item_select.col-lg-3.col-md-3.col-sm-6.col-xs-6 {
-        height:266px;
+        height: 266px;
     }
-    .padding_alltop{
-        padding-top:0px;
+
+    .padding_alltop {
+        padding-top: 0px;
     }
-    .top_header{
-        position:fixed;
-        z-index:9999;
-        background:#ffffff;
-        padding-bottom:10px;
-        width:100%;
+
+    .top_header {
+        position: fixed;
+        z-index: 9999;
+        background: #ffffff;
+        padding-bottom: 10px;
+        width: 100%;
+        box-shadow: 0px 10px 16px -5px rgba(0,0,0,0.75);
     }
-    content .Contentpage{
-        padding-top:70px;
-    }
-   
 }
-}
+
+
 @media all and (max-width: 400px) {
-    .logo_pc{
-        padding-left:30px;
-        padding-right:30px;
+    .logo_pc {
+        padding-left: 30px;
+        padding-right: 30px;
     }
-    
 }
