--- a/BizwebTutorial/Views/Home/Contact.cshtml
+++ b/BizwebTutorial/Views/Home/Contact.cshtml
@@ -1,17 +1,53 @@
-﻿@{
-    ViewBag.Title = "Contact";
-}
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
+﻿@model Models.ViewModel.ContactUser
 <link href="~/Assets/FrontEndCss/HoverCat.css" rel="stylesheet" />
-<address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
-    <abbr title="Phone">P:</abbr>
-    425.555.0100
-</address>
 
-<address>
-    <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
-</address>
+<div class="Map_address">
+    <iframe class="mapgoogle" src="https://www.google.com/maps/embed?pb=!1m26!1m12!1m3!1d59596.68772143183!2d105.78269438483227!3d21.000933919319667!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m11!3e6!4m3!3m2!1d20.9712048!2d105.80105329999999!4m5!1s0x3135ab911e785029%3A0x90e43f2936ff4db1!2zQuG7h25oIHZp4buHbiBUaW0gSMOgIE7hu5lpIDkyIFRy4bqnbiBIxrBuZyDEkOG6oW8!3m2!1d21.023583199999997!2d105.8438408!5e0!3m2!1svi!2s!4v1486004903862" frameborder="0" style="border:0" allowfullscreen></iframe>
+    <style>
+        .mapgoogle{
+            width:100%;
+            height:400px;
+        }
+    </style>
+</div>
+@using (Html.BeginForm("Contact", "Home", FormMethod.Post,new { enctype = "multipart/form-data" }))
+{
+    @Html.AntiForgeryToken()
+    <div class="Comment_Cus">
+        @Html.ValidationSummary("", new { @class = "text-danger" })
+        <div class="form-group">
+            <label class="control-label"><strong>  Email Liên Hệ</strong></label>
+            @Html.TextBoxFor(m => m.EmailUser, new { @class = "form-control", @placeholder = "Nhập email" })
+            @Html.ValidationMessageFor(m => m.EmailUser, "", new { @class = "text-danger"})
+        </div>
+        <div class="form-group">
+            <label class="control-label"><strong> Nhận Xét</strong></label>
+            @Html.TextAreaFor(m => m.Comment, new { @class = "form-control" })
+            @Html.ValidationMessageFor(m => m.Comment, "", new { @class = "text-danger"})
+        </div>
+        <div class="form-group">
+            <button type="submit" class="btn btn-default btnsend">Gửi</button>
+        </div>
+    </div>
+}
+<style>
+    .Comment_Cus {
+        width: 70%;
+        margin: auto;
+    }
+
+    .btnsend {
+        color: #ffffff;
+        background: #e24d85;
+        float: right;
+    }
+
+    #Comment {
+        height: 138px;
+    }
+
+    .Map_address {
+        padding-top: 100px;
+    }
+</style>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBu-916DdpKAjTmJNIgngS6HL_kDIKU0aU&callback=myMap"></script>
