--- a/BizwebTutorial/Views/OrderView/Create.cshtml
+++ b/BizwebTutorial/Views/OrderView/Create.cshtml
@@ -3,7 +3,6 @@
 
 }
 <link href="~/Assets/FrontEndCss/HoverCat.css" rel="stylesheet" />
-
 @using (Html.BeginForm("Create", "OrderView", FormMethod.Post, new { enctype = "multipart/form-data", @id = "OrderCusform" }))
 {
     @Html.AntiForgeryToken()
@@ -13,45 +12,38 @@
             <div class="form-group">
                 <label class="control-label">Email</label>
                
-                @Html.TextBoxFor(m => m.EmailCustomer, new { @class = "form-control" })
+                @Html.TextBoxFor(m => m.EmailCustomer, new { @class = "form-control", placeholder = "Nhập Email" })
               
             </div>
             <div class="form-group">
                 <label class="control-label">Tên Khách Hàng</label>
                
-                @Html.TextBoxFor(m => m.NameCustomer, new { @class = "form-control" })
+                @Html.TextBoxFor(m => m.NameCustomer, new { @class = "form-control", placeholder = "Nhập tên" })
                
             </div>
             <div class="form-group">
                 <label class="control-label">Thành Phố</label>
                 
-                @Html.TextBoxFor(m => m.AddressCustomer, new { @class = "form-control" })
+                @Html.TextBoxFor(m => m.AddressCustomer, new { @class = "form-control", placeholder = "Nhạp địa chỉ" })
                
             </div>
             <div class="form-group">
                 <label class="control-label">Số Điện Thoại</label>
                 
-                @Html.TextBoxFor(m => m.PhoneCustomer, new { @class = "form-control" })
+                @Html.TextBoxFor(m => m.PhoneCustomer, new { @class = "form-control", placeholder = "Số điện thoại" })
             </div>
         </div>
         <div class="col-md-6 col-sm-12 customer-info">
             <div class="form-group">
                 <table class="table table-striped" width="100%">
-                    <thead>
-                        <tr>
-                            <td>Ảnh</td>
-                            <td>Tên</td>
-                            <td>Giá</td>
-                            <td>Số Lượng</td>
-                        </tr>
-                    </thead>
+                  
                     <tbody>
                         @foreach (var item in Model.ListItemProduct)
                         {
                             <tr>
                                 <td><img src="@item.ImageProduct" width="50" height="50" /></td>
                                 <td>@item.NameProduct</td>
-                                <td>@item.PriceProduct</td>
+                                <td>@item.PriceProduct ₫</td>
                                 <td>@item.QuantityProduct</td>
                             </tr>
                         }
@@ -85,3 +77,11 @@
         $('#OrderCusform').submit();
     });
 </script>
+<style>
+    table.table.table-striped {
+    margin-top: 35px;
+}
+    .customer-info{
+        margin-top:50px;
+    }
+</style>
